<resources>
    <string name="app_name">Attendance</string>
    <string name="full_name">full name</string>
    <string name="roll_no">roll no</string>
    <string name="email_id">email id</string>
    <string name="submit">submit</string>
    <string name="password">Password</string>
    <string name="pass">password</string>
    <string name="branch">branch</string>
    <string name="samester">samester</string>
    <string name="name">Name</string>
    <string name="rollno">Roll No</string>
    <string name="branc">Branch</string>
    <string name="sameste">Samester</string>
    <string name="emailid">Email id</string>
</resources>
